melior/src/pass/snapshots/melior__pass__manager__tests__parse_pass_pipeline_.snap
---
source: src/pass/manager.rs
expression: "parse_pass_pipeline(manager.as_operation_pass_manager(),\n        \"builtin.module(func.func(print-op-stats{json=false}),\\\n                func.func(print-op-stats{json=false}))\").unwrap_err()"
---
failed to parse pass pipeline:
MLIR Textual PassPipeline Parser:1:11: error: 'print-op-stats' does not refer to a registered pass or pass pipeline
func.func(print-op-stats{json=false}),func.func(print-op-stats{json=false})
          ^

